[package]
name = "network_analysis"
version = "0.2.3"
edition = "2024"
description = "Solver for nonlinear networks based on the mesh and nodal analysis methods"
readme = "README.md"
license  = "MIT OR Apache-2.0"
repository = "https://github.com/StefanMathis/network_analysis.git"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "docs/**",
    "tests/**",
]

[dependencies]
petgraph = { version = "0.8.3", features = ["rayon"]}
nalgebra = {version = "0.32"}
rayon = "1.5"
cart_lin = { version = "0.2.1"}
approx = "0.5.1"
serde-value = { version = "0.7", optional = true }
serde = { version = "1", features = ["derive", "rc"], optional = true }

[features]
default = []
serde = ["dep:serde", "nalgebra/serde-serialize", "petgraph/serde-1", "serde-value"]

[dev-dependencies]
network_analysis = { path = ".", features = ["serde"] }

[package.metadata.docs.rs]
features = ["serde"]